nohup.out
Loading required package: foreach
Loading required package: parallel
Loading required package: doParallel
Loading required package: iterators
Installing package into ‘/cis/home/jagterb1/R/x86_64-pc-linux-gnu-library/3.4’
(as ‘lib’ is unspecified)
* installing *source* package ‘nonparGraphTesting’ ...
** R
** inst
** preparing package for lazy loading
Warning: replacing previous import ‘Matrix::cov2cor’ by ‘stats::cov2cor’ when loading ‘nonparGraphTesting’
Warning: replacing previous import ‘Matrix::toeplitz’ by ‘stats::toeplitz’ when loading ‘nonparGraphTesting’
Warning: replacing previous import ‘Matrix::update’ by ‘stats::update’ when loading ‘nonparGraphTesting’
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded
Warning: replacing previous import ‘Matrix::cov2cor’ by ‘stats::cov2cor’ when loading ‘nonparGraphTesting’
Warning: replacing previous import ‘Matrix::toeplitz’ by ‘stats::toeplitz’ when loading ‘nonparGraphTesting’
Warning: replacing previous import ‘Matrix::update’ by ‘stats::update’ when loading ‘nonparGraphTesting’
* DONE (nonparGraphTesting)
Warning messages:
1: replacing previous import ‘Matrix::cov2cor’ by ‘stats::cov2cor’ when loading ‘nonparGraphTesting’ 
2: replacing previous import ‘Matrix::toeplitz’ by ‘stats::toeplitz’ when loading ‘nonparGraphTesting’ 
3: replacing previous import ‘Matrix::update’ by ‘stats::update’ when loading ‘nonparGraphTesting’ 
Loading required package: irlba
Loading required package: Matrix
Loading required package: igraph
Loading required package: methods

Attaching package: ‘igraph’

The following objects are masked from ‘package:stats’:

    decompose, spectrum

The following object is masked from ‘package:base’:

    union

Loading required package: Rcpp
[1] "packages loaded, running SBM simulation on 24 cores."
file17414325480b.cpp: In function ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’:
file17414325480b.cpp:26:33: error: redefinition of ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp:7:33: note: ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’ previously defined here
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp: In function ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’:
file17414325480b.cpp:58:17: error: redefinition of ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp:44:17: note: ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’ previously defined here
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp: In function ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’:
file17414325480b.cpp:26:33: error: redefinition of ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp:7:33: note: ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’ previously defined here
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp: In function ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’:
file17414325480b.cpp:58:17: error: redefinition of ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp:44:17: note: ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’ previously defined here
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
make: *** [file17414325480b.o] Error 1
g++  -I/opt/microsoft/ropen/3.4.3/lib64/R/include -DNDEBUG   -I"/opt/microsoft/ropen/3.4.3/lib64/R/library/Rcpp/include" -I"/tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14" -I/usr/local/include -DU_STATIC_IMPLEMENTATION   -fpic  -DU_STATIC_IMPLEMENTATION -g -O2  -c file17414325480b.cpp -o file17414325480b.o
/opt/microsoft/ropen/3.4.3/lib64/R/etc/Makeconf:168: recipe for target 'file17414325480b.o' failed
make: *** [file17414325480b.o] Error 1
g++  -I/opt/microsoft/ropen/3.4.3/lib64/R/include -DNDEBUG   -I"/opt/microsoft/ropen/3.4.3/lib64/R/library/Rcpp/include" -I"/tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14" -I/usr/local/include -DU_STATIC_IMPLEMENTATION   -fpic  -DU_STATIC_IMPLEMENTATION -g -O2  -c file17414325480b.cpp -o file17414325480b.o
/opt/microsoft/ropen/3.4.3/lib64/R/etc/Makeconf:168: recipe for target 'file17414325480b.o' failed
file17414325480b.cpp: In function ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’:
file17414325480b.cpp:26:33: error: redefinition of ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp:7:33: note: ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’ previously defined here
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp: In function ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’:
file17414325480b.cpp:58:17: error: redefinition of ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp:44:17: note: ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’ previously defined here
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp: In function ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’:
file17414325480b.cpp:26:33: error: redefinition of ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp:7:33: note: ‘Rcpp::NumericMatrix generateAdjacencyMatrix(Rcpp::NumericMatrix)’ previously defined here
                   NumericMatrix generateAdjacencyMatrix(NumericMatrix pMatrix) {
                                 ^
file17414325480b.cpp: In function ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’:
file17414325480b.cpp:58:17: error: redefinition of ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
file17414325480b.cpp:44:17: note: ‘SEXPREC* sourceCpp_3_generateAdjacencyMatrix(SEXP)’ previously defined here
 RcppExport SEXP sourceCpp_3_generateAdjacencyMatrix(SEXP pMatrixSEXP) {
                 ^
make: *** [file17414325480b.o] Error 1
g++  -I/opt/microsoft/ropen/3.4.3/lib64/R/include -DNDEBUG   -I"/opt/microsoft/ropen/3.4.3/lib64/R/library/Rcpp/include" -I"/tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14" -I/usr/local/include -DU_STATIC_IMPLEMENTATION   -fpic  -DU_STATIC_IMPLEMENTATION -g -O2  -c file17414325480b.cpp -o file17414325480b.o
/opt/microsoft/ropen/3.4.3/lib64/R/etc/Makeconf:168: recipe for target 'file17414325480b.o' failed
make: *** [file17414325480b.o] Error 1
g++  -I/opt/microsoft/ropen/3.4.3/lib64/R/include -DNDEBUG   -I"/opt/microsoft/ropen/3.4.3/lib64/R/library/Rcpp/include" -I"/tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14" -I/usr/local/include -DU_STATIC_IMPLEMENTATION   -fpic  -DU_STATIC_IMPLEMENTATION -g -O2  -c file17414325480b.cpp -o file17414325480b.o
/opt/microsoft/ropen/3.4.3/lib64/R/etc/Makeconf:168: recipe for target 'file17414325480b.o' failed
[1] "initializing simulation for n = 900 eps =  0"
[1] "beginning simulation for n = 900 eps =  0"
[1] "i = 1 out of 100"
[1] "initializing simulation for n = 300 eps =  0.2"
[1] "beginning simulation for n = 300 eps =  0.2"
[1] "i = 1 out of 100"
[1] "i = 2 out of 100"
Error in { : 
  task 1 failed - "unable to load shared object '/tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14/sourcecpp_173e42aee7b/sourceCpp_7.so':
  /tmp/Rtmpbvpzlm/sourceCpp-x86_64-pc-linux-gnu-0.12.14/sourcecpp_173e42aee7b/sourceCpp_7.so: file too short"
Calls: %dopar% -> <Anonymous>
Execution halted
